--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
             <nav>
                 <div class="profile-section">
-                    <img class="profile-image mb-3 rounded-cirlce mx-auto" src="assets/images//me.JPG">
+                    <img class="profile-image mb-3 rounded-cirlce mx-auto" src="./assets/images/me.JPG">
                     <div class="bio mb-3">Hi, my name is Anil Canbolat and i'm a junior full stack developer. Welcome to my personal website!</div>
                     <br>
                     <ul class="social-list list-inline">
@@ -74,7 +74,7 @@
                 <br>
                 <div class="card-deck">
                     <div class="card">
-                        <img src="assets/images/movieExplorer.PNG" class="card-img-top" alt="...">
+                        <img src="./assets/images/movieExplorer.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Movie Explorer</h5>
                             <p class="card-text">Movie database web app that lets you enter a Movie title and will display data on the screen such as poster image, rating, overview, trailer, and more.
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="assets/images/schedule.PNG" class="card-img-top" alt="...">
+                        <img src="./assets/images/schedule.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Day Planner</h5>
                             <p class="card-text">Web app that lets you input daily tasks for hours between 9am-5pm. Color coded to set apart past, present, and future hours.</p>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="assets/images/weatherDashboard.PNG" class="card-img-top" alt="...">
+                        <img src="./assets/images/weatherDashboard.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Weather Dashboard</h5>
                             <p class="card-text">Web app that lets you input and city name around the world and will display current temperature, five-day forecast, wind-speed, humidity and more.</p>
