--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <br>
             <nav>
                 <div class="profile-section">
-                    <img class="profile-image mb-3 rounded-cirlce mx-auto" src="./assets/images/me.jpg">
+                    <img class="profile-image mb-3 rounded-cirlce mx-auto" src="./assets/images/me.JPG">
                     <div class="bio mb-3">Hi, my name is Anil Canbolat and i'm a junior full stack developer. Welcome to my personal website!</div>
                     <br>
                     <ul class="social-list list-inline">
