--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a class="nav-link fas fa-project-diagram" href="#projectsHeader"> Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fas fa-file" href="assets/resume.PDF" target="_blank"> Resume</a>
+                    <a class="nav-link fas fa-file" href="assets/Resume.pdf" target="_blank"> Resume</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fas fa-envelope" href="#contact"> Contact</a>
@@ -62,7 +62,7 @@
                     <hr>
                     <br>
                     <div class="bio2">I'm a student of University of Oregon's Coding-Bootcamp program gaining all the skills needed for a junior full stack developer role at your service. Have a look around and dont forget to check out my projects! If you have any questions
-                        or comments you can submit it by heading over to the <a class="textLinks" href="#contact">Contact</a> page, and <a class="textLinks" href="assets/resume.PDF" target="_blank">Resume</a> for more information.</div>
+                        or comments you can submit it by heading over to the <a class="textLinks" href="#contact">Contact</a> page, and <a class="textLinks" href="assets/Resume.pdf" target="_blank">Resume</a> for more information.</div>
                     <br>
                 </div>
             </div>
