updated prejects names

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a class="btn btn-success fas fa-play" href="https://anil1992-rgb.github.io/Project1/" target="_blank"> Try Me!</a>
-                            <a class="btn btn-success fab fa-github" href="https://github.com/Anil1992-rgb/Project1" target="_blank"> Repo</a>
+                            <a class="btn btn-success fas fa-play" href="https://anil1992-rgb.github.io/Movie-Explorer/" target="_blank"> Try Me!</a>
+                            <a class="btn btn-success fab fa-github" href="https://github.com/Anil1992-rgb/Movie-Explorer" target="_blank"> Repo</a>
 
                         </div>
                     </div>
@@ -93,8 +93,8 @@
                             <p class="card-text">Web app that lets you input daily tasks for hours between 9am-5pm. Color coded to set apart past, present, and future hours.</p>
                         </div>
                         <div class="card-footer">
-                            <a class="btn btn-success fas fa-play" href="https://anil1992-rgb.github.io/homework5/index" target="_blank"> Try Me!</a>
-                            <a class="btn btn-success fab fa-github" href="https://github.com/Anil1992-rgb/homework5" target="_blank"> Repo</a>
+                            <a class="btn btn-success fas fa-play" href="https://anil1992-rgb.github.io/Day-Planner" target="_blank"> Try Me!</a>
+                            <a class="btn btn-success fab fa-github" href="https://github.com/Anil1992-rgb/Day-Planner" target="_blank"> Repo</a>
                         </div>
                     </div>
                     <div class="card">
@@ -104,8 +104,8 @@
                             <p class="card-text">Web app that lets you input and city name around the world and will display current temperature, five-day forecast, wind-speed, humidity and more.</p>
                         </div>
                         <div class="card-footer">
-                            <a class="btn btn-success fas fa-play" href="https://anil1992-rgb.github.io/homework6/" target="_blank"> Try Me!</a>
-                            <a class="btn btn-success fab fa-github" href="https://github.com/Anil1992-rgb/homework6" target="_blank"> Repo</a>
+                            <a class="btn btn-success fas fa-play" href="https://anil1992-rgb.github.io/Weather-DashBoard" target="_blank"> Try Me!</a>
+                            <a class="btn btn-success fab fa-github" href="https://github.com/Anil1992-rgb/Weather-DashBoard" target="_blank"> Repo</a>
                         </div>
                     </div>
                 </div>
